Removing orchestrated mode
